--- a/style main.css
+++ b/style main.css
@@ -44,11 +44,17 @@ p {
   animation: div-active 0.3s alternate forwards;
 }
 
+.social-imgs {
+  height: 30px;
+  padding: 5px;
+}
+
 @keyframes div-effect {
   0% {
   }
   100% {
-    box-shadow: 0px 0px 15px blue;
+    box-shadow: 0px 0px 30px blue;
+    scale: 1.2;
   }
 }
 @keyframes div-active {
