--- a/style main.css
+++ b/style main.css
@@ -64,3 +64,14 @@ p {
     background-color: blue;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #9a9a9a;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(104, 104, 255);
+}
